--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
                                             <p><strong>Australian Grand Prix</strong></p>
                                             <img src="images/AustraliaResult.png" alt="Australian Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
-                                        <div id="race-china-sprint" class="race-content hidden">
+                                  <!--     
+                                            <div id="race-china-sprint" class="race-content hidden">
                                             <p><strong>Chinese Grand Prix Sprint</strong></p>
                                             <img src="images/ChinaSprintResult.png" alt="Chinese Grand Prix Sprint Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
@@ -447,6 +448,7 @@
                                             <p><strong>Abu Dhabi Grand Prix</strong></p>
                                             <img src="images/AbuDhabiResult.png" alt="Abu Dhabi Grand Prix Result" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        -->
                                     </div>
                                 </div>
                             </div>
@@ -461,7 +463,7 @@
                                     <nav class="flex flex-wrap justify-center gap-2 sm:gap-4 border-b-2 border-gray-700 pb-4 overflow-x-auto mt-2">
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-general')">General</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-australia')">Australian GP</button>
-                                        <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-china')">Chinese GP</button>
+                                <!--    <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-china')">Chinese GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-japan')">Japanese GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-bahrain')">Bahrain GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-saudi arabia')">Saudi Arabia GP</button>
@@ -484,6 +486,7 @@
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-vegas')">Las Vegas GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-qatar')">Qatar GP</button>
                                         <button class="facts-tab px-4 py-2 rounded-lg text-base sm:text-lg bg-gray-600 hover:bg-gray-500 transition whitespace-nowrap" onclick="showFactsTab('facts-abudhabi')">Abu Dhabi GP</button>
+                                        -->
                                     </nav>
                                     <!-- Race Facts content -->
                                     <div id="f1-facts-content" class="text-sm sm:text-base mt-2">
@@ -547,6 +550,7 @@
                                             </video>
                                             <p>FORMULA ADDICT. (2025, March 15). Australian Qualifying [Video]. X. https://x.com/i/status/1900930714188533844</p>
                                         </div>
+                               <!--
                                         <div id="facts-china" class="facts-content hidden">
                                             <p><strong>Chinese Grand Prix Qualifying</strong></p>
                                             <video width="640" height="360" controls>
@@ -742,6 +746,7 @@
                                             <p><strong>Abu Dhabi Grand Prix</strong></p>
                                             <img src="images/AbuDhabi.png" alt="Abu Dhabi Grand Prix" class="w-full max-w-md h-auto mb-4">
                                         </div>
+                                        -->
                                     </div>
                                 </div>
                             </div>
